# EntityNet

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
app/: streamlit_app.py  styles.py
data/: benchmark.jsonl
data/sample/: companies.csv  persons.csv  relationships.csv  sanctions.csv
data/sample/news/: article_001.json  article_002.json  article_003.json  article_004.json  article_005.json  article_006.json  article_007.json  article_008.json  article_009.json  article_010.json  article_011.json  article_012.json  article_013.json  article_014.json  article_015.json
scripts/: benchmark.py  build.py  build_linkedin_carousel.py  export_hf.py
src/entitynet/: __init__.py  cli.py  config.py  db.py  schemas.py
src/entitynet/benchmark/: __init__.py  metrics.py  runner.py
src/entitynet/extract/: __init__.py  linker.py  ner.py
src/entitynet/graph/: __init__.py  builder.py  queries.py  schema.py
src/entitynet/retrieve/: __init__.py  graph_rag.py  hybrid.py  risk_report.py  vector.py
tests/: test_benchmark_file.py  test_metrics.py  test_sample_data.py  test_schemas.py
