[project]
name = "entitynet"
version = "0.1.0"
description = "GraphRAG for Adverse Media & Entity Risk: KYC/AML-style risk screening with a knowledge graph."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EntityNet" }]

dependencies = [
    # Graph DB (embedded, single-file, Cypher-like)
    "kuzu>=0.7.0",
    # Vector DB (embedded)
    "chromadb>=0.5.5",
    # Local embeddings (free, runs on CPU)
    "sentence-transformers>=3.0.0",
    # Entity extraction
    "spacy>=3.7.5",
    "rapidfuzz>=3.9.0",
    # Data + schemas
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Graph algorithms (used by the core retriever; viz libs live in the
    # optional `dashboard` extra)
    "networkx>=3.3",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    # Plumbing
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    # Optional LLM (free via Groq/Gemini through OpenAI-compatible endpoints)
    "openai>=1.40.0",
    "instructor>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.5.0",
]
huggingface = [
    "datasets>=3.0.0",
    "huggingface-hub>=0.24.0",
]
# Experimental dashboard prototype (see Roadmap in README). Not required
# to build the graph or run the benchmark.
dashboard = [
    "streamlit>=1.36.0",
    "pyvis>=0.3.2",
    "plotly>=5.22.0",
    "altair>=5.3.0",
]

[project.scripts]
entitynet = "entitynet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entitynet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501", "B008", "N818"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"app/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
